<?xml version="1.0"?>
<package>
  <name>stikklar_description</name>
  <version>0.1.0</version>
  <description>Robot description package for Stikklar a wheeled quadruped</description>

  <maintainer email="freyr.magnusson@gmail.com">Freyr Magnusson</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/stikklar_description</url> -->

  <author email="freyr.magnusson@gmail.com">Freyr Magnusson</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamixel_urdf</build_depend>
  <run_depend>dynamixel_urdf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>